add apache header check plugin and format code plugin (#572)
* add apache header check plugin

* add fotmat plugin

* move format code to verify phase

* change to compile phase

* change to verify phase

* remove special char in .travis

* remove useless code

* add apach header and format codes

* Update MavenWrapperDownloader.java